[FEATURE] 5.3.0 features